# dioxus-diet-site

./: Cargo.toml  Dioxus.toml  index.html
assets/: main.css
src/: api.rs  main.rs  models.rs
src/components/: api_key_input.rs  image_capture.rs  mod.rs  query_input.rs  results.rs
