[package]
name = "dioxus-diet-site"
version = "0.1.0"
edition = "2021"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReader",
    "Blob",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "ImageBitmap",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-file = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
tracing = "0.1"
